--- a/nutricion/assets/css/style.css
+++ b/nutricion/assets/css/style.css
@@ -433,6 +433,9 @@ table.dataTable thead .sorting_desc_disabled:after,
 .boxed-layout .page-container .sidebar-bg {
 	left: auto;
 }
+.container.evaluacion{
+	background: #fff;
+}
 .boxed-layout .page-container #header {
 	width: 1080px;
 	right: auto;
@@ -1792,7 +1795,7 @@ table.dataTable thead .sorting_desc_disabled:after,
 .content.content-full-width .page-header {
 	margin: 20px;
 }
-.content.content-full-width . {
+.content.content-full-width {
 	margin: 0 20px 0 0;
 }
 .container evaluacion{
@@ -3110,6 +3113,16 @@ legend {
 	line-height: 24px;
 	padding: 10px 16px;
 }
+.btn.btn-minuta-lg{
+	font-size: 16px;
+	line-height: 24px;
+	padding: 10px 350px;
+}
+.btn.btn-minuta-xs{
+	font-size: 16px;
+	line-height: 24px;
+	padding: 10px 95px;
+}
 .btn-icon,
 .btn.btn-icon {
 	display: inline-block;
@@ -3389,7 +3402,9 @@ legend {
 	border-right-color: #5cb85c;
 }
 
-
+.color-preparacion{
+	color: #f59c1a;
+}
 /* 4.14.6 Component - Button - Warning */
 
 .btn.btn-warning,
@@ -4878,7 +4893,7 @@ input[type=checkbox]
 	margin-bottom: 15px;
 }
 .card-accordion .card + .card {
-	margin-top: -10px;
+	margin-top: 10px;
 }	
 .card-block {
 	padding: 15px;
@@ -4908,12 +4923,12 @@ input[type=checkbox]
 	border-bottom-left-radius: 4px;
 }
 .card-header {
-	padding: 10px 15px;
-	margin-bottom: 0;
-	margin-top: 0;
-	background-color: #f2f3f4;
-	border-bottom: 1px solid #f2f3f4;
-	font-weight: 600;
+	padding: 1px 0px;
+	margin-bottom: 110;
+	margin-top: 110;
+	background-color: #f59c1a;
+	border-bottom: 0px solid #f59c1a;
+	font-weight: 2000;
 }
 .card-header-link,
 a.card-header-link {
@@ -5869,7 +5884,7 @@ a.ui-button:active, .ui-button:active,
 }
 .collapse{
     width: 100%;
-    height: 200px;
+    height: 200%;
     overflow: auto;
 }
 .combobox-container {
